--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -2,32 +2,35 @@
   background-color: #dedede;
 }
 
-.app {
-  background-color: $white;
-  padding: 2rem;
-  border-radius: 1rem;
-  justify-content: center;
+.wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  width: 100%;
+  height: 100%;
 
-  .header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .app {
+    width: 70rem;
 
-    Button {
-      width: 1.5rem !important;
-      height: 1.5rem !important;
-      margin-left: 1rem;
+    .header {
+      background-color: $white;
+      border-radius: 1rem;
+      justify-content: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
     }
-  }
-
-  .content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  
+    .content {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 50rem;
+      background-color: $white;
+      border-radius: 0.5rem;
+      margin-top: 0.5rem;
+    }
   }
 }
